// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic function 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_Function_IamRole_88AD864C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_Function_IamRolePolicy_8C4F8AF5\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_Function_IamRolePolicyAttachment_AF131EC2\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_Function_9F694E40\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function-c852aba6\\"
          }
        },
        \\"function_name\\": \\"Function-c852aba6\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function_S3Object_A62722D8.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Function_Bucket_8CDD903C\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_Function_S3Object_A62722D8\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Function": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.13.2",
                },
                "id": "Asset",
                "path": "root/Function/Asset",
              },
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "10.0.12",
                },
                "id": "Bucket",
                "path": "root/Function/Bucket",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/Function/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "10.0.12",
                },
                "id": "IamRole",
                "path": "root/Function/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicy",
                "path": "root/Function/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/Function/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "10.0.12",
                },
                "id": "S3Object",
                "path": "root/Function/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud function (FaaS)",
              "title": "Function",
            },
            "id": "Function",
            "path": "root/Function",
          },
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "An inflight resource",
              "hidden": true,
              "title": "Inflight",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/Function",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.12",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with environment variables 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_Function_IamRole_88AD864C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_Function_IamRolePolicy_8C4F8AF5\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_Function_IamRolePolicyAttachment_AF131EC2\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_Function_9F694E40\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BOOM\\": \\"BAM\\",
            \\"FOO\\": \\"BAR\\",
            \\"WING_FUNCTION_NAME\\": \\"Function-c852aba6\\"
          }
        },
        \\"function_name\\": \\"Function-c852aba6\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function_S3Object_A62722D8.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Function_Bucket_8CDD903C\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_Function_S3Object_A62722D8\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function with environment variables 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Function": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.13.2",
                },
                "id": "Asset",
                "path": "root/Function/Asset",
              },
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "10.0.12",
                },
                "id": "Bucket",
                "path": "root/Function/Bucket",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/Function/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "10.0.12",
                },
                "id": "IamRole",
                "path": "root/Function/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicy",
                "path": "root/Function/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/Function/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "10.0.12",
                },
                "id": "S3Object",
                "path": "root/Function/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud function (FaaS)",
              "title": "Function",
            },
            "id": "Function",
            "path": "root/Function",
          },
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "An inflight resource",
              "hidden": true,
              "title": "Inflight",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/Function",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.12",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`function name valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_TheMightyFunction01_IamRole_34EB69E9\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_TheMightyFunction01_IamRolePolicy_366404CE\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction01_IamRole_34EB69E9.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_TheMightyFunction01_IamRolePolicyAttachment_4F1EB129\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction01_IamRole_34EB69E9.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_TheMightyFunction01_F0DB42C1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"The-Mighty_Function-01-c86057f3\\"
          }
        },
        \\"function_name\\": \\"The-Mighty_Function-01-c86057f3\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction01_IamRole_34EB69E9.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction01_Bucket_60E1D724.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_TheMightyFunction01_S3Object_6949E35F.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_TheMightyFunction01_Bucket_60E1D724\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_TheMightyFunction01_S3Object_6949E35F\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction01_Bucket_60E1D724.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "The-Mighty_Function-01": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.13.2",
                },
                "id": "Asset",
                "path": "root/The-Mighty_Function-01/Asset",
              },
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "10.0.12",
                },
                "id": "Bucket",
                "path": "root/The-Mighty_Function-01/Bucket",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/The-Mighty_Function-01/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "10.0.12",
                },
                "id": "IamRole",
                "path": "root/The-Mighty_Function-01/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicy",
                "path": "root/The-Mighty_Function-01/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/The-Mighty_Function-01/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "10.0.12",
                },
                "id": "S3Object",
                "path": "root/The-Mighty_Function-01/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "The-Mighty_Function-01",
            "path": "root/The-Mighty_Function-01",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/The-Mighty_Function-01",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.12",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from function name 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_TheMightyFunction_IamRole_DF8277B4\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_TheMightyFunction_IamRolePolicy_8379B0E6\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction_IamRole_DF8277B4.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_TheMightyFunction_IamRolePolicyAttachment_BC72ACBA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction_IamRole_DF8277B4.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_TheMightyFunction_E909CD7D\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"The-Mighty-Function-c86ccf73\\"
          }
        },
        \\"function_name\\": \\"The-Mighty-Function-c86ccf73\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction_IamRole_DF8277B4.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction_Bucket_9BE7597A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_TheMightyFunction_S3Object_D0A75871.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_TheMightyFunction_Bucket_9BE7597A\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_TheMightyFunction_S3Object_D0A75871\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction_Bucket_9BE7597A.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from function name 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "The%Mighty$Function": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.13.2",
                },
                "id": "Asset",
                "path": "root/The%Mighty$Function/Asset",
              },
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "10.0.12",
                },
                "id": "Bucket",
                "path": "root/The%Mighty$Function/Bucket",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "10.0.12",
                },
                "id": "Default",
                "path": "root/The%Mighty$Function/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "10.0.12",
                },
                "id": "IamRole",
                "path": "root/The%Mighty$Function/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicy",
                "path": "root/The%Mighty$Function/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "10.0.12",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/The%Mighty$Function/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "10.0.12",
                },
                "id": "S3Object",
                "path": "root/The%Mighty$Function/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "The%Mighty$Function",
            "path": "root/The%Mighty$Function",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/The%Mighty$Function",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.12",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
